amelioration icon user de la bar nav

--- a/inscription.html
+++ b/inscription.html
@@ -32,8 +32,8 @@
               <input class="searchBar" type="text" placeholder="Votre recherche" />
               <img class="search-logo" src="/Assets/Image/search-solid-white.svg" alt="search icon"/>
             </div>
-            <div class="nav-right__user-icon__contener">
-              <a href="/inscription.html"><img class="nav-right__user-icon" src="/Assets/Image/user-solid.svg" alt="icon user"></a>
+            <div>
+                <a class="nav-right__user-icon__contener" href="/inscription.html"><img class="nav-right__user-icon" src="/Assets/Image/user-solid.svg" alt="icon user"></a>
             </div>
           </div>
         </div>
